fix bottom app bar auto hide on ios safari update bottom sheet

--- a/src/components/bottom-app-bar/global.css
+++ b/src/components/bottom-app-bar/global.css
@@ -1,6 +1,4 @@
 mdw-bottom-app-bar {
-  --mdw-bottom-app-bar-scroll-position: 0px;
-
   position: fixed;
   bottom: 0;
   left: 0;
@@ -13,7 +11,7 @@ mdw-bottom-app-bar {
   width: 100%;
   height: 80px;
   align-items: center;
-  z-index: 1;
+  z-index: 9;
 
   background-color: var(--mdw-surface);
   box-shadow: var(--mdw-elevation-2);
@@ -66,7 +64,7 @@ mdw-bottom-app-bar > mdw-bottom-app-bar-secondary.mdw-show {
 }
 
 mdw-bottom-app-bar.mdw-auto-hide {
-  bottom: var(--mdw-bottom-app-bar-scroll-position);
+  margin-bottom: var(--mdw-bottom-app-bar-position);
 }
 
 /* only show on compact */
@@ -142,7 +140,7 @@ mdw-bottom-app-bar mdw-fab {
 }
 
 mdw-bottom-app-bar.mdw-auto-hide mdw-fab {
-  bottom: max(calc(var(--mdw-bottom-app-bar-scroll-position) + 12px), 6px);
+  bottom: max(calc(var(--mdw-bottom-app-bar-position) + 12px), 6px);
 }
 
 
